--- a/templates/index.html
+++ b/templates/index.html
@@ -4,7 +4,7 @@
 <head>
   <title>Testing...</title>
 
-  <link rel="stylesheet" href="style.css">
+  <link rel="stylesheet" href="static/style.css">
 </head>
 
 <body>
@@ -12,9 +12,10 @@
     <h1>Camera Capture App</h1>
     <video id="video" autoplay></video>
     <button id="capture-btn">Capture Photo</button>
+    <button id="start-btn">Start Background Thread on Server</button>
     <canvas id="canvas"></canvas>
   </div>
-  <script src="script.js"></script>
+  <script src="static/script.js"></script>
 </body>
 
 </html>
