JS Calc image differences demo

--- a/templates/index.html
+++ b/templates/index.html
@@ -11,9 +11,12 @@
   <div class="container">
     <h1>Camera Capture App</h1>
     <video id="video" autoplay></video>
-    <button id="capture-btn">Capture Photo</button>
     <button id="start-btn">Start Background Thread on Server</button>
-    <canvas id="canvas"></canvas>
+    <canvas id="canvas-cap1"></canvas>
+    <button id="capture-btn1">Capture Photo 1</button>
+    <canvas id="canvas-cap2"></canvas>
+    <button id="capture-btn2">Capture Photo 2</button>
+    <canvas id="canvas-diff"></canvas>
   </div>
   <script src="static/script.js"></script>
 </body>
