deep in js debugging

--- a/templates/index.html
+++ b/templates/index.html
@@ -11,11 +11,7 @@
   <div class="container">
     <h1>Camera Capture App</h1>
     <video id="video" autoplay></video>
-    <button id="start-btn">Start Background Thread on Server</button>
-    <canvas id="canvas-cap1"></canvas>
-    <button id="capture-btn1">Capture Photo 1</button>
-    <canvas id="canvas-cap2"></canvas>
-    <button id="capture-btn2">Capture Photo 2</button>
+    <button id="start-btn">Start The Process</button>
     <canvas id="canvas-diff"></canvas>
   </div>
   <script src="static/script.js"></script>
