add debug visualizations

--- a/templates/index.html
+++ b/templates/index.html
@@ -3,7 +3,6 @@
 
 <head>
   <title>Testing...</title>
-
   <link rel="stylesheet" href="static/style.css">
 </head>
 
@@ -12,6 +11,11 @@
     <h1>Camera Capture App</h1>
     <video id="video" autoplay></video>
     <button id="start-btn">Start The Process</button>
+    <br><br>
+    <label for="led-select">Select LED:</label>
+    <select id="led-select"></select>
+    <button id="visualize-btn">Show LED Data</button>
+    <br><br>
     <canvas id="canvas-diff"></canvas>
   </div>
   <script src="static/script.js"></script>
