JS functionality complete for now

--- a/templates/index.html
+++ b/templates/index.html
@@ -15,6 +15,9 @@
     <label for="led-select">Select LED:</label>
     <select id="led-select"></select>
     <button id="visualize-btn">Show LED Data</button>
+    <button id="overview-btn">Show Overview (All LEDs)</button>
+    <button id="prev-led-btn">Previous LED</button>
+    <button id="next-led-btn">Next LED</button>
     <br><br>
     <canvas id="canvas-diff"></canvas>
   </div>
