--- a/templates/index.html
+++ b/templates/index.html
@@ -16,7 +16,7 @@
       </div>
 
       <!-- Controls -->
-      <div class="controls">
+      <div class="controls-container">
         <button id="start-btn">Start</button>
         <hr>
         <label for="led-select">Select LED:</label>
