implement 2 direction scan and data merge

--- a/templates/index.html
+++ b/templates/index.html
@@ -21,17 +21,17 @@
         <label for="led-select">Select LED:</label>
         <select id="led-select"></select>
         <div class="btn-group">
-          <button id="prev-led-btn-x">&lt;</button>
-          <button id="visualize-btn-x">Show LED X</button>
-          <button id="next-led-btn-x">&gt;</button>
+          <button disabled id="prev-led-btn-x">&lt;</button>
+          <button disabled id="visualize-btn-x">Show LED X</button>
+          <button disabled id="next-led-btn-x">&gt;</button>
         </div>
-        <button id="overview-btn-x">Show Overview X</button>
+        <button disabled id="overview-btn-x">Show Overview X</button>
         <div class="btn-group">
-          <button id="prev-led-btn-y">&lt;</button>
-          <button id="visualize-btn-y">Show LED Y</button>
-          <button id="next-led-btn-y">&gt;</button>
+          <button disabled id="prev-led-btn-y">&lt;</button>
+          <button disabled id="visualize-btn-y">Show LED Y</button>
+          <button disabled id="next-led-btn-y">&gt;</button>
         </div>
-        <button id="overview-btn-y">Show Overview Y</button>
+        <button disabled id="overview-btn-y">Show Overview Y</button>
         <button id="transmit-btn" class="action-btn">Transmit 3D pos</button>
       </div>
 
