add sweeping plane effect in xyz

--- a/templates/index.html
+++ b/templates/index.html
@@ -30,6 +30,10 @@
             <input type="color" id="base-color-picker" value="#ffffff" title="Set LED Color">
           </div>
         </div>
+        <button id="effect-sweeping-plane-btn">Sweeping Plane Effect</button>
+        <button id="effect-sweeping-plane-x-btn">Sweeping Plane X Effect</button>
+        <button id="effect-sweeping-plane-y-btn">Sweeping Plane Y Effect</button>
+        <button id="effect-sweeping-plane-z-btn">Sweeping Plane Z Effect</button>
         <button id="effect-stop-btn" class="action-btn">Stop Effects</button>
       </div>
 
