add led centering button and light up single led

--- a/templates/index.html
+++ b/templates/index.html
@@ -25,6 +25,9 @@
           <select id="led-select"></select>
           <button id="btn-inc">&gt;</button>
         </div>
+        <button id="center-led-position-in-x-btn">Fix Position in X</button>
+        <button id="center-led-position-in-y-btn">Fix Position in Y</button>
+        <button id="light-up-led-btn">Light up LED</button>
         <div class="btn-group">
           <button id="mask-led-btn">Mask</button>
           <button id="unmask-led-btn">Unmask</button>
