--- a/templates/index.html
+++ b/templates/index.html
@@ -247,8 +247,8 @@
       <div class="controls-container">
         <!-- Tab Navigation -->
         <div class="tab-nav">
-          <button class="tab-btn active" data-tab="x-coords" id="nav-tab-x">X Coords</button>
-          <button class="tab-btn" data-tab="y-coords" id="nav-tab-y">Y Coords</button>
+          <button class="tab-btn active" data-tab="x-coords" id="nav-tab-x">X</button>
+          <button class="tab-btn" data-tab="y-coords" id="nav-tab-y">Y</button>
           <button class="tab-btn" data-tab="effects" id="nav-tab-effects">Effects</button>
         </div>
 
@@ -262,7 +262,6 @@
               <select id="led-select"></select>
               <button id="btn-inc">&gt;</button>
             </div>
-            <button id="light-up-led-btn">Light up LED</button>
             <button id="effect-all-on-btn">All On</button>
             <div class="btn-group">
               <button id="mask-led-btn">Mask</button>
@@ -276,14 +275,12 @@
           <div class="tab-panel active" id="x-coords">
             <button id="start-btn-x">Capture X Coords</button>
             <button id="center-led-position-in-x-btn" class="action-btn">Fix Position in X</button>
-            <button disabled id="overview-btn-x">Show Overview X</button>
           </div>
 
           <!-- Y Coordinates Tab -->
           <div class="tab-panel" id="y-coords">
             <button id="start-btn-y">Capture Y Coords</button>
             <button id="center-led-position-in-y-btn" class="action-btn">Fix Position in Y</button>
-            <button disabled id="overview-btn-y">Show Overview Y</button>
           </div>
 
           <!-- Effects Tab -->
